client/src/styles/globals.css
/* ... */
.strapi-markdown h6 {
	font-size: 1rem;
}

.strapi-markdown ul {
	list-style-type: disc;
	list-style-position: inside;
}

.strapi-markdown ol {
	list-style-type: decimal;
	list-style-position: inside;
}

.strapi-markdown ul ul,
ol ul {
	list-style-type: circle;
	list-style-position: inside;
	margin-left: 15px;
}

.strapi-markdown ol ol,
ul ol {
	list-style-type: lower-latin;
	list-style-position: inside;
	margin-left: 15px;
}

.contact-popup-show {
	animation: contactPopupShow;
	animation-duration: .2s;
	animation-timing-function: ease-in-out;
}

@keyframes contactPopupShow {
	from {
		opacity: 0;
		transform: translateX(10vw);
	}
	to {
		opacity: 1;
		transform: translateX(0);
	}
}

.contact-popup-hide {
	animation: contactPopupHide;
	animation-duration: .2s;
	animation-timing-function: ease-in-out;
}

@keyframes contactPopupHide {
	from {
		opacity: 1;
		transform: translateX(0);
	}

	to {
		opacity: 0;
		transform: translateX(10vw);
	}
}

.backdrop {
	position: fixed;
	top: 0;
	left: 0;
	height: 100%;
	width: 100%;
	background-color: rgba(0, 0, 0, .75);
	display: flex;
	align-items: center;
	justify-content: center;
}

.modal {
	/* max-height: 90vh; */
	overflow-y: scroll;
	/* width: clamp(50%, 700px, 90%);
	height: min(50%, 300px); */
	/* margin: 2rem; */
	/* padding: 1.5rem 2rem; */
	border-radius: 6px;
	display: flex;
	flex-direction: column;
	align-items: center;
	-ms-overflow-style: none;
		scrollbar-width: none;
}

/* Hide scrollbar for Chrome, Safari and Opera */
.modal::-webkit-scrollbar {
	display: none;
}

/* @media (max-width: 768px) {
	.modal {
		margin: 1rem;
		padding: 1rem;
	}
} */

.violet {
	color: #866bfe;
}

.blue {
	color: #2176D6;
}

.orange {
	color: #D6A221
}

.process-swiper {
	padding: 0rem 0rem 4rem 0rem !important;
}

.swiper-pagination-bullet-active {
	background: #866bfe !important;
}

.bullet-lightmode .swiper-pagination-bullet{
	background: #000;
}

.bullet-darkmode .swiper-pagination-bullet {
	background: #fff;
}

.hero-background {
	position: relative;
	width: 100%;
	background-color: rgb(0, 0, 0);
}

.hero-background::before {
	content: "";
	background-image: url('/home/hero/mobile.webp');
	background-position: center;
	background-size: cover;
	position: absolute;
	top: 0px;
	right: 0px;
	bottom: 0px;
	left: 0px;
	opacity: .35;
}

.fade-background {
	position: relative;
}

.fade-background::before {
	content: "";
	position: absolute;
	top: 0;
	left: 0;
	width: 30%;
	height: 100%;
	background: linear-gradient(to right, rgba(7, 7, 9, .6), rgba(255, 255, 255, 0));
	z-index: 10;
}

.fade-background::after {
	content: "";
	position: absolute;
	top: 0;
	right: 0;
	width: 30%;
	height: 100%;
	background: linear-gradient(to left, rgba(7, 7, 9, .6), rgba(255, 255, 255, 0));
	z-index: 10;
}

.fade-element {
	position: relative;
	z-index: 1;
}

.technologies-swiper .swiper-wrapper {
	display: grid;
	grid-template-columns: repeat(10, 1fr);
	cursor: move;
}

.client-comment .swiper-wrapper {
	display: grid;
	grid-template-columns: repeat(7, 1fr);
}

.swiper-grid-3 .swiper-wrapper {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
}

.swiper-grid-4 .swiper-wrapper {
	display: grid;
	grid-template-columns: repeat(4, 1fr);
}

.swiper-grid-5 .swiper-wrapper {
	display: grid;
	grid-template-columns: repeat(5, 1fr);
}

.break-word {
	word-break: break-word;
}

.home-background {
	position: relative;
}

.home-background::before {
	content: "";
	position: absolute;
	top: 0;
	left: 0;
	background-image: url("/lightmode.webp");
	background-repeat: no-repeat;
	background-size: cover;
	background-position: right;
	width: 100vw;
	height: 100%;
	opacity: .2;
	z-index: 0;
}

.md-pricing-swiper .swiper-wrapper {
	padding: 0rem 0rem 4rem 0rem !important;
	display: grid;
	grid-template-columns: repeat(5, 1fr);
}

